cluster/ci/config/prow/acsengine/deck.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: deck
  spec:
    selector:
      app: prow
      component: deck
    ports:
    - port: 80
      targetPort: 8080
    type: ClusterIP
- apiVersion: apps/v1beta2
  kind: Deployment
  metadata:
    name: deck
    labels:
      app: prow
      component: deck
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: prow
        component: deck
    revisionHistoryLimit: 2
    template:
      metadata:
        labels:
          app: prow
          component: deck
      spec:
        containers:
        - name: deck
          image: gcr.io/k8s-prow/deck:v20180411-68d5d28e8
          args:
          - --tide-url=http://tide/
          - --hook-url=http://hook:8888/plugin-help
          # defaults to --config-path=/etc/config/config
          ports:
            - name: http
              # not configurable today, deck serves in 8080 
              containerPort: 8080
          volumeMounts:
          - name: config
            mountPath: /etc/config
            readOnly: true
        volumes:
        - name: config
          configMap:
            name: config
