cluster/ci/config/prow/acsengine/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tls-ing
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: prow-tls
    hosts:
    - acs-engine-prow.eastus.cloudapp.azure.com
  rules:
  - host: acs-engine-prow.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: deck
          servicePort: 80
      - path: /hook
        backend:
          serviceName: hook
          servicePort: 8888
